# sighashdb

./: .gitignore  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: main.rs
db/: Cargo.toml
db/src/: lib.rs
scripts/: bulk_add.sh
src/: lib.rs
