[package]
name = "sighashdb"
version = "0.1.27"
edition = "2021"
authors = ["Tulip Protocol"]
description = "sighashdb is a collection of anchor instruction sighashes commonly seen acrossa variety of anchor based programs"
keywords = ["solana", "anchor-lang", "sighash"]
license = "MIT/Apache-2.0"
[features]
reverse-get = []
tulipv1-leverage-farm = []
tulipv2 = []
atrix-farm = []
default = ["reverse-get", "tulipv1-leverage-farm", "tulipv2"]
[dependencies]
hex = {version = "0.4.3", optional = true}
[dev-dependencies]
data-encoding = "2.3.2"
ring = "0.16.20"